Disable c2hs b/c of https://github.com/haskell/c2hs/issues/268

--- a/package.yaml
+++ b/package.yaml
@@ -62,8 +62,8 @@ executables:
 
 library:
   source-dirs: src
-  build-tools:
-  - c2hs
+  # build-tools:
+  # - c2hs
   include-dirs:
   - godot_headers
   - cbits
