--- a/classgen/stack.yaml
+++ b/classgen/stack.yaml
@@ -16,7 +16,7 @@
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
 # resolver: lts-11.2
-resolver: lts-15.4
+resolver: nightly-2021-08-17
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
