--- a/examples/rss-reader/myproject.cabal
+++ b/examples/rss-reader/myproject.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.33.0.
+-- This file has been generated from package.yaml by hpack version 0.34.4.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b6a0d2a1fc09513a3765e90723389dc19ec4879f3963404979d2a68731de6d6e
+-- hash: 636a64f376a29b7e1ba662136c3328e284e565fe4a93312340e656ef8bbfec94
 
 name:           myproject
 version:        0.0.0.0
@@ -49,7 +49,19 @@ library
   hs-source-dirs:
       src
       game
-  default-extensions: FlexibleContexts MultiParamTypeClasses OverloadedStrings TemplateHaskell TypeApplications TypeFamilies DataKinds FlexibleInstances ScopedTypeVariables AllowAmbiguousTypes TypeOperators TupleSections
+  default-extensions:
+      FlexibleContexts
+      MultiParamTypeClasses
+      OverloadedStrings
+      TemplateHaskell
+      TypeApplications
+      TypeFamilies
+      DataKinds
+      FlexibleInstances
+      ScopedTypeVariables
+      AllowAmbiguousTypes
+      TypeOperators
+      TupleSections
   ghc-options: -Wall -Wno-orphans -O0
   build-depends:
       aeson
