--- a/godot-haskell.cabal
+++ b/godot-haskell.cabal
@@ -821,15 +821,17 @@ executable godot-haskell-project-generator
   build-depends:
       aeson
     , attoparsec
-    , pretty-show
     , base
     , bytestring
     , casing
     , containers
     , directory
     , extra
-    , filepath
+    , path-text
+    , filepath-text
+    , rawfilepath
     , fsnotify
+    , godot-megaparsec
     , interpolate
     , lens
     , mtl
@@ -839,4 +841,5 @@ executable godot-haskell-project-generator
     , th-abstraction
     , unordered-containers
     , vector
+    , vector-algorithms
   default-language: Haskell2010
